Dockerfile backend fix

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,16 @@
-
 FROM python:3.11-slim
-
 
 WORKDIR /app
 
-
+# Kopiujemy plik z zależnościami i instalujemy je
 COPY requirements.txt .
-
-
-
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Kopiujemy cały kod backendu
 COPY . .
 
+# Eksponujemy port 8000
+EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Uruchamiamy aplikację na porcie zewnętrznym dostarczonym przez Render
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
