added env to dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,5 +12,6 @@ COPY . .
 # Eksponujemy port 8000
 EXPOSE 8000
 
+ENV DATABASE_URL=[$DATABASE_URL]
 # Uruchamiamy aplikację na porcie zewnętrznym dostarczonym przez Render
 CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
