--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://admin:ORIEEu4sSmqKwtWCrOiQ6YPLocGJwN5s@dpg-d2105h49c44c73916v80-a.frankfurt-postgres.render.com/inzynierka_wbf8
+DATABASE_URL=postgresql://admin:yXcljYIvEPrwM5tEEeDznftRZIlUrCfq@dpg-d210hc7fte5s73eup9c0-a.frankfurt-postgres.render.com/inzynierka_j4kl
