--- a/frontend/assets/manifest.json
+++ b/frontend/assets/manifest.json
@@ -8,12 +8,12 @@
   "description": "To Do App!",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icons/192-todo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "icons/512-todo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
