--- a/frontend/assets/manifest.json
+++ b/frontend/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "test",
-  "short_name": "test",
+  "name": "Praca Inzynierska",
+  "short_name": "To-Do App",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#202020",
@@ -8,20 +8,20 @@
   "description": "test!",
   "icons": [
     {
-      "src": "assets/icons/192-todo.png",
+      "src": "/assets/icons/192-todo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "assets/icons/512-todo.png",
+      "src": "/assets/icons/512-todo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
 
     {
-      "src": "assets/icons/16-todo.png",
+      "src": "/assets/icons/16-todo.png",
       "sizes": "16x16",
       "type": "image/png",
       "purpose": "any maskable"
