--- a/frontend/assets/manifest.json
+++ b/frontend/assets/manifest.json
@@ -8,20 +8,20 @@
   "description": "test!",
   "icons": [
     {
-      "src": "/assets/icons/192-todo.png",
+      "src": "/icons/192-todo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/assets/icons/512-todo.png",
+      "src": "/icons/512-todo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
 
     {
-      "src": "/assets/icons/16-todo.png",
+      "src": "/icons/16-todo.png",
       "sizes": "16x16",
       "type": "image/png",
       "purpose": "any maskable"
